# sage-loop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.en.md  README.md  install.sh  pyproject.toml
.github/workflows/: auto-release.yml
examples/: README.md
git-hooks/: post-push
hooks/: role_detector.py  sage-reinstall.sh  sage_executor.py  sage_state_manager.py  stop-hook.sh
hooks/codex/: install.sh
overlays/antigravity/: model_map.yaml
overlays/claude/: model_map.yaml
overlays/claude/hooks/: circuit_breaker_check.py  completion_detector.py  feedback_checker.py  sage_executor.py
overlays/codex/: config.toml  instructions.md  model_map.yaml
overlays/cursor/: model_map.yaml
overlays/opencode/: model_map.yaml
overlays/vscode/: model_map.yaml
scripts/: apply_overlay.py  auto_release.py
skills/: academy.md  analyst.md  architect.md  censor.md  critic.md  executor.md  historian.md  hongmungwan.md  ideator.md  improver.md  inspector.md  left-state-councilor.md  reflector.md  right-state-councilor.md  sagawon.md  sage.md  saheonbu.md  validator.md
skills/analyst-finance/: SKILL.md
skills/analyst-justice/: SKILL.md
skills/analyst-military/: SKILL.md
skills/analyst-personnel/: SKILL.md
skills/analyst-rites/: SKILL.md
skills/analyst-works/: SKILL.md
skills/ideator-finance/: SKILL.md
skills/ideator-justice/: SKILL.md
skills/ideator-military/: SKILL.md
skills/ideator-personnel/: SKILL.md
skills/ideator-rites/: SKILL.md
skills/ideator-works/: SKILL.md
skills/sage/: SKILL.md  config.yaml
skills/sage/guides/: SAGE_AUTONOMOUS_LOOP.md
skills/sage/scripts/: mode_selector.py  orchestrator.py  task_planner.py
skills/seungji-finance/: SKILL.md
skills/seungji-justice/: SKILL.md
skills/seungji-military/: SKILL.md
skills/seungji-personnel/: SKILL.md
skills/seungji-rites/: SKILL.md
skills/seungji-works/: SKILL.md
skills/yeong-ui-jeong/: SKILL.md  reference.md
skills/yeong-ui-jeong/guides/: SAGE_AUTONOMOUS_LOOP.md
skills/yeong-ui-jeong/scripts/: agenda_parser.py  lint_scripts.py  task_planner.py
src/sage/: api.py  config.py  error_logger.py  mcp_server.py  ministry_registry.py  schemas.py  session.py
src/sage/engine/: __init__.py  chain_executor.py  compact_checkpoint.py  context_compactor.py  (+2 more)
src/sage_loop/: __init__.py  api.py  config.py  mcp_server.py  ministry_registry.py  role_dispatcher.py  session.py  state_manager.py
(+43 files in other folders)
