[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-loop"
version = "1.2.1"
description = "15-phase autonomous agent orchestration system for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
sage-orchestrator = "sage_loop.cli.orchestrator:main"
sage-mode = "sage_loop.cli.mode_selector:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_loop"]
artifacts = ["*.yaml"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "sage_loop/skills"

[tool.hatch.build.targets.sdist]
include = ["src/sage_loop", "skills"]
