[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-loop"
version = "1.4.0"
description = "14-phase autonomous agent orchestration system for Claude Code and Google Antigravity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
sage-orchestrator = "sage_loop.cli.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_loop"]
artifacts = ["*.yaml"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "sage_loop/skills"

[tool.hatch.build.targets.sdist]
include = ["src/sage_loop", "skills"]
